# AgriCareer-Tracker

./: .gitignore  README.md  adsdb  nginx.conf  package-lock.json  progress.md
backend/: .env  ecosystem.config.js  pyproject.toml  requirements.txt  users.json
backend/adsdb/: app.db  app.db-shm  app.db-wal
backend/app/: __init__.py  auth.py  cache.py  mailer.py  main.py  models.py  schemas.py  storage.py
backend/sql_dump/: insert_users.sql  seed_lowongan_lamaran.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.jsx  index.css
frontend/src/components/: AppLayout.jsx  AuthImage.jsx  NotificationBell.jsx  ProfileMenu.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/layouts/: AdminLayout.jsx  DosenLayout.jsx  MahasiswaLayout.jsx
frontend/src/pages/: ApplyMagang.jsx  BimbinganAdmin.jsx  Chat.jsx  DashboardAdmin.jsx  DashboardDosen.jsx  DashboardMahasiswa.jsx  DetailLamaranMahasiswa.jsx  DetailLowonganDosen.jsx  DetailLowonganMahasiswa.jsx  ForgotPassword.jsx  FormLowonganAdmin.jsx  LamaranDosen.jsx  LamaranMahasiswa.jsx  LogbookDosen.jsx  LogbookMahasiswa.jsx  Login.css  Login.jsx  LowonganAdmin.jsx  LowonganDosen.jsx  LowonganMahasiswa.jsx  PengumumanAdmin.jsx  ProfileAdmin.jsx  ProfileDosen.jsx  ProfileMahasiswa.jsx  Register.jsx  ResetPassword.jsx  TenggatAdmin.jsx  Unauthorized.jsx  UsersAdmin.jsx  VerifyEmail.jsx
html-design/: index.html  lowonganmagang.html  lowonganterbuka.html  maindashboard.html  statuslamaran.html  uploadbukti.html
(+3 files in other folders)
