[project]
name = "agricareer-backend"
version = "1.0.0"
description = "AgriCareer - Sistem Manajemen Magang Mahasiswa"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "AgriCareer Team" }
]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
